<resources>
    <string name="app_name">Login</string>
    <string name="title">Acceso</string>
    <string name="subtitle">Inicia sesión en tu cuenta</string>
    <string name="titleUserField">Usuario</string>
    <string name="editTextUsername">Nombre de usuario</string>
    <string name="titlePasswd">Contraseña</string>
    <string name="linkPasswd">¿Has olvidado tu contraseña?</string>
    <string name="editTextPassword">Contraseña</string>
    <string name="buttonLogin">Iniciar sesión</string>
    <string name="titleButtonRegister">¿No tienes una cuenta?</string>
    <string name="buttonRegister">Registrarse</string>


    <string name="regis">Regístrate</string>
    <string name="subregis">Crea una cuenta en la aplicación</string>
    <string name="Nmusuario">Nombre de usuario</string>

    <string name="crelectronico">Correo electronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Rpcontraseña">Repite la contraseña</string>
    <string name="crearcuenta">Crear Cuenta</string>

    <string name="wellcome">Bienvenido, %s</string>

</resources>