<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D9D8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:background="#458C82"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#030303"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Subtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textColor="#030303" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="166dp"
                android:layout_height="166dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="AppLogo"
                app:srcCompat="@drawable/olaicon" />

            <LinearLayout
                android:layout_width="335dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleUserField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleUserField"
                    android:textColor="#030303" />

                <LinearLayout
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/UserIcon"
                        android:layout_width="44dp"
                        android:layout_height="48dp"
                        android:background="@drawable/et_style_left"
                        android:backgroundTint="#FFF"
                        android:contentDescription="UserIcon"
                        app:srcCompat="@drawable/icon_user" />

                    <EditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/et_style_right"
                        android:backgroundTint="#FFF"
                        android:ems="10"
                        android:hint="@string/editTextUsername"
                        android:inputType="text"
                        android:padding="10dp"
                        android:shadowRadius="20"
                        android:textColorHint="#A9A9A9"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/titlePasswd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titlePasswd"
                        android:textColor="#030303" />

                    <TextView
                        android:id="@+id/linkPasswd"
                        android:layout_width="267dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/linkPasswd"
                        android:textColor="#548C82" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="33dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/KeyIcon"
                        android:layout_width="44dp"
                        android:layout_height="48dp"
                        android:background="@drawable/et_style_left"
                        android:backgroundTint="#FFF"
                        android:contentDescription="KeyIcon"
                        app:srcCompat="@drawable/icon_key" />

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/et_style_right"
                        android:backgroundTint="#FFF"
                        android:ems="10"
                        android:hint="@string/editTextPassword"
                        android:inputType="text"
                        android:padding="10dp"
                        android:password="true"
                        android:shadowRadius="20"
                        android:textColorHint="#A9A9A9"
                        android:textSize="16sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#293C40"
                    android:onClick="logIn"
                    android:text="@string/buttonLogin"
                    app:cornerRadius="12dp" />

                <TextView
                    android:id="@+id/titleButtonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleButtonRegister"
                    android:textColor="#548C82" />

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#293C40"
                    android:onClick="Register"
                    android:text="@string/buttonRegister"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>